add release notes

--- a/src/reference/01-General-Info/90-Changes/21-sbt-1.1-Release-Notes.md
+++ b/src/reference/01-General-Info/90-Changes/21-sbt-1.1-Release-Notes.md
@@ -4,6 +4,220 @@ out: sbt-1.1-Release-Notes.html
 
 ## sbt 1.1.x releases
 
+### sbt 1.1.6
+
+#### Bug fixes
+
+- Fixes file watching for Unix/Linux. [io#150][io150] by [@eatkins][@eatkins]
+- Fixes packageBin not creating file when deleted. sbt/sbt#4161 by [@dadarakt][]
+- Fixes help -v rendering of multi-line descriptions. [#4160][4160] by [@ninjalama][@ninjalama]
+- Fixes --error etc to set log level. [#4162][4162] by [@holdenk][@holdenk]
+- Handles managedSources writing into unmanaged source directories. [#4099][4099] by [@eatkins][@eatkins]
+- Fixes handling of overflows in EventMonitor. [io#155][io155] by [@eatkins][@eatkins]
+- Recovers "Resolving..." log under `UpdateLogging.Full`. [lm#240][lm240] by [@hodga][@hodga]
+- Fixes `-Dconfig.resource=/path/to/configFile` conflicting with Gigahorse. [lm#241][lm241] by [@tanishiking][@tanishiking] 
+- Removes use of deprecated ModifiedTime methods. [io#154][io154] by [@dwestheide][@dwestheide]
+- Fixes tests on Windows. [io#153][io153] by [@OlegYch][@OlegYch]
+
+#### Contributors
+
+A huge thank you to everyone who's helped improve sbt and Zinc 1 by using them, reporting bugs, improving our documentation, porting builds, porting plugins, and submitting and reviewing pull requests.
+
+sbt 1.1.6 was brought to you by 15 contributors, according to `git shortlog -sn --no-merges v1.1.5...v1.1.6` on sbt, zinc, librarymanagement, util, io, launcher-package, and website: Ethan Atkins, Eugene Yokota, Dale Wijnand, Aaron S. Hawley, OlegYch, Richard Summerhayes, Jannis (dadarakt), Rikito Taniguchi (tanishiking), Øyvind Høisæther, Daniel Westheide, Harrison Houghton, Holden Karau, Håkon Wold, Jason Zaugg, and tekay.
+
+  [@eed3si9n]: https://github.com/eed3si9n
+  [@dwijnand]: http://github.com/dwijnand
+  [@cunei]: https://github.com/cunei
+  [@jvican]: https://github.com/jvican
+  [@Duhemm]: https://github.com/Duhemm
+  [@xuwei-k]: https://github.com/xuwei-k
+  [@retronym]: https://github.com/retronym
+  [@eatkins]: https://github.com/eatkins
+  [@dadarakt]: https://github.com/dadarakt
+  [@ninjalama]: https://github.com/ninjalama
+  [@holdenk]: https://github.com/holdenk
+  [@hodga]: https://github.com/hodga
+  [@tanishiking]: https://github.com/tanishiking
+  [@dwestheide]: https://github.com/dwestheide
+  [@OlegYch]: https://github.com/OlegYch
+   
+  [io150]: https://github.com/sbt/io/pull/150
+  [io153]: https://github.com/sbt/io/pull/153
+  [io154]: https://github.com/sbt/io/pull/154
+  [io155]: https://github.com/sbt/io/pull/155
+  [lm240]: https://github.com/sbt/librarymanagement/pull/240
+  [lm241]: https://github.com/sbt/librarymanagement/pull/241
+  [4099]: https://github.com/sbt/sbt/pull/4099
+  [4159]: https://github.com/sbt/sbt/pull/4159
+  [4160]: https://github.com/sbt/sbt/pull/4160
+  [4161]: https://github.com/sbt/sbt/pull/4161
+  [4162]: https://github.com/sbt/sbt/pull/4162
+  [4163]: https://github.com/sbt/sbt/pull/4163
+  [4164]: https://github.com/sbt/sbt/pull/4164
+
+----
+
+### sbt 1.1.5
+
+#### Bug fixes
+
+- Fixes the latency between file modification events and triggered execution. [io#142][io142] and [sbt#4096][4096] by [@eatkins][@eatkins]
+- Fixes NPE that could arise from WatchEvent [io#140][io140] by [@oneill][@oneill]
+- Fixes deleted files not triggering `~`. [sbt#4098][4098] by [@eatkins][@eatkins]
+- Fixes MacOSXWatchService to meet the WatchService API. [io#142][io142] by [@eatkins][@eatkins]
+- Avoids printing `RejectedExectionExeption` stack trace after cancellation. [sbt#4058][4058] by [@retronym][@retronym]
+- Fixes Java version checking on Windows. [lp#227][lp227] / [lp#228][lp228] by [@jessicah][@jessicah] and [@spangaer][@spangaer]
+- Fixes unexpected responses from sbt server. [sbt#4093][4093] by [@laughedelic][@laughedelic]
+- Re-fix console and JLine bug. [sbt#4123][4123] by [@eed3si9n][@eed3si9n]
+- Fixes grammar for contributors guide. [sbt#4133][4133] by [@som-snytt][@som-snytt]
+
+#### Improvements
+
+- Performance optimization for Zinc. [zinc#492][zinc492] by [@retronym][@retronym]
+- Adds support for detecting Dotty compiler plugins. [zinc#529][zinc529] by [@liufengyun][@liufengyun]
+- Bumps Scala to 2.12.6. [sbt#4129][4129] by [@SethTisue][@SethTisue]
+- Updates to JLine 2.14.6. [sbt#4087][4087] by [@hvesalai][@hvesalai]
+- Start sbt in VS Code terminal window. See below.
+
+#### Watcher improvements
+
+Continuing from sbt 1.1.4, Ethan Atkins contributed fixes and improvements for triggered execution `~` watcher. sbt 1.1.5 should fix the latency between file modification events and the command execution.
+
+#### VS Code extension update
+
+We released a new sbt VS Code extension that starts sbt session in the embedded terminal window. This was contributed by Robert Walker ([@WalkingOlof][@WalkingOlof]) in [sbt#4130][4130].
+
+#### sbt by example
+
+We added [sbt by example][by-example] to the sbt documentation.
+This is a single-page guide that takes you from zero to building an app on Docker, inspired by, and largely based on William Narmontas ([@ScalaWilliam][@ScalaWilliam])'s [Essential sbt][essential-sbt].
+
+#### Contributors
+
+A huge thank you to everyone who's helped improve sbt and Zinc 1 by using them, reporting bugs, improving our documentation, porting builds, porting plugins, and submitting and reviewing pull requests.
+
+sbt 1.1.5 was brought to you by 21 constributors, according to `git shortlog -sn --no-merges v1.1.4...v1.1.5` on sbt, zinc, librarymanagement, util, io, launcher-packege, and website: Eugene Yokota, Ethan Atkins, Jason Zaugg, Liu Fengyun, Antonio Cunei, Dale Wijnand, Roberto Bonvallet, Alexey Alekhin, Daniel Parks, Heikki Vesalainen, Jean-Luc Deprez, Jessica Hamilton, Kenji Yoshida (xuwei-k), Nikita Gazarov, OlegYch, Richard Summerhayes, Robert Walker, Seth Tisue, Som Snytt, oneill, and 杨博 (Yang Bo)
+
+
+  [@eed3si9n]: https://github.com/eed3si9n
+  [@dwijnand]: http://github.com/dwijnand
+  [@cunei]: https://github.com/cunei
+  [@jvican]: https://github.com/jvican
+  [@Duhemm]: https://github.com/Duhemm
+  [@xuwei-k]: https://github.com/xuwei-k
+  [@retronym]: https://github.com/retronym
+  [@eatkins]: https://github.com/eatkins
+  [@oneill]: https://github.com/oneill
+  [@jessicah]: https://github.com/jessicah
+  [@spangaer]: https://github.com/spangaer
+  [@laughedelic]: https://github.com/laughedelic
+  [@som-snytt]: https://github.com/som-snytt
+  [@liufengyun]: https://github.com/liufengyun
+  [@SethTisue]: https://github.com/SethTisue
+  [@hvesalai]: https://github.com/hvesalai
+  [@olofwalker]: https://github.com/olofwalker
+  [@ScalaWilliam]: https://twitter.com/ScalaWilliam
+  [@WalkingOlof]: https://twitter.com/WalkingOlof
+  [io140]: https://github.com/sbt/io/pull/140
+  [io142]: https://github.com/sbt/io/pull/142
+  [4058]: https://github.com/sbt/sbt/pull/4058
+  [4087]: https://github.com/sbt/sbt/pull/4087
+  [4093]: https://github.com/sbt/sbt/pull/4093
+  [4096]: https://github.com/sbt/sbt/pull/4096
+  [4098]: https://github.com/sbt/sbt/pull/4098
+  [4123]: https://github.com/sbt/sbt/pull/4123
+  [4129]: https://github.com/sbt/sbt/pull/4129
+  [4130]: https://github.com/sbt/sbt/pull/4130
+  [4133]: https://github.com/sbt/sbt/pull/4133
+  [lp227]: https://github.com/sbt/sbt-launcher-package/pull/227
+  [lp228]: https://github.com/sbt/sbt-launcher-package/pull/228
+  [zinc492]: https://github.com/sbt/zinc/pull/492
+  [zinc529]: https://github.com/sbt/zinc/pull/529
+  [by-example]: https://www.scala-sbt.org/1.x/docs/sbt-by-example.html
+  [essential-sbt]: https://www.scalawilliam.com/essential-sbt/
+
+----
+
+### sbt 1.1.4
+
+#### Bug fixes
+
+- Fixes triggered execution on macOS. See below for details.
+- Fixes running `console` twice messing up JLine. [#3482][3482]/[#4054][4054] by [@eed3si9n][@eed3si9n]
+- Fixes `updateSbtClassifiers`. [#4070][4070]/[#3432][3432] by [@steinybot][@steinybot]
+- Fixes Java error message handling. [zinc#524][zinc524]/[zinc#525][zinc525] by [@retronym][@retronym] and [@dwijnand][@dwijnand]
+- Fixes the error message linking to the migration guide. [#4063][4063] by [@dwijnand][@dwijnand]
+- Fixes batch script so sbt runs on JDK 10 on Windows. [lp#225][lp225] by [@eed3si9n][@eed3si9n]
+- Fixes bash script so `sbt -debug` changes log level to debug. [lp#226][lp226] by [@eed3si9n][@eed3si9n]
+
+#### Improvements
+
+- Exposes `sbt.io.JavaMilli`. [io#139][io139] by [@dwijnand][@dwijnand]
+- Adds `-Dsbt.launcher.cp.prepend` JVM flag that is used for monkey patching sbt. [launcher#50][launcher50] by [@fommil][@fommil]
+
+#### Triggered execution on macOS
+
+sbt has long had issues with triggered execution on macOS. Ethan Atkins has contributed a fix for this problem by merging MacOSXWatchService from his [CloseWatch][closewatch]. Thanks, Ethan!
+
+Credit also goes to Greg Methvin and Takari's directory-watcher. [#3860][3860]/[#4071][4071]/[io#138][io138] by [@eatkins][@eatkins]
+
+#### Running sbt with standby
+
+One of the tricky things you come across while profiling is figuring out the process ID,
+while wanting to profile the beginning of the application.
+
+For this purpose, we've added `sbt.launcher.standby` JVM flag. Starting sbt 1.1.4, you can run:
+
+```
+\$ sbt -J-Dsbt.launcher.standby=20s exit
+```
+
+This will count down for 20s before doing anything else. [launcher#51][launcher51] by [@eed3si9n][@eed3si9n]
+
+#### Loading performance improvement
+
+Using Flame graph (if you haven't yet, check out [Profiling JVM applications](../2018-04-09-profiling-JVM-applications/) post), Jason Zaugg identified hashing code of the build file to be one of the hot paths during sbt startup. Flame graph supports `Ctrl+F` to filter on method names; and when I ran it, it showed 4.5% of the time was spent in `Eval#evalCommon` method.
+
+Instead of creating an intermediate `Array[Byte]` and passing it to `MessageDigest` at the end, Jason suggested that we pass the arrays to `MessageDigest#update` in a more procedural style. After confirming that it worked, we've next identified file timestamp code to be the next bottle neck using Flame graph, so that was switched to using NIO. After both changes, `Eval#evalCommon`'s footprint reduced to 2.3%.
+
+This means that your build loads slightly faster on sbt 1.1.4 (about 0.54s faster on akka/akka, for example). [#4067][4067] by [@eed3si9n][@eed3si9n]
+
+### Contributors
+
+A huge thank you to everyone who's helped improve sbt and Zinc 1 by using them, reporting bugs, improving our documentation, porting builds, porting plugins, and submitting and reviewing pull requests.
+
+sbt 1.1.4 was brought to you by 11 contributors, according to `git shortlog -sn --no-merges v1.1.2...v1.1.4` on sbt, zinc, librarymanagement, util, io, launcher-packege, and website: Eugene Yokota, Dale Wijnand, 杨博 (Yang Bo), Ethan Atkins, Sam Halliday, Aaron S. Hawley, Gabriele Petronella, Jason Steenstra-Pickens, Jason Zaugg, Julien Jean Paul Sirocchi, and aumann.
+
+  [@eed3si9n]: https://github.com/eed3si9n
+  [@dwijnand]: http://github.com/dwijnand
+  [@cunei]: https://github.com/cunei
+  [@jvican]: https://github.com/jvican
+  [@Duhemm]: https://github.com/Duhemm
+  [@xuwei-k]: https://github.com/xuwei-k
+  [@retronym]: https://github.com/retronym
+  [@eatkins]: https://github.com/eatkins
+  [@steinybot]: https://github.com/steinybot
+  [@fommil]: https://github.com/fommil
+  [closewatch]: https://github.com/swoval/swoval/tree/master/plugin
+  [io138]: https://github.com/sbt/io/pull/138
+  [io139]: https://github.com/sbt/io/pull/139
+  [3860]: https://github.com/sbt/sbt/issues/3860
+  [4071]: https://github.com/sbt/sbt/pull/4071
+  [zinc524]: https://github.com/sbt/zinc/pull/524
+  [zinc525]: https://github.com/sbt/zinc/pull/525
+  [4054]: https://github.com/sbt/sbt/pull/4054
+  [3482]: https://github.com/sbt/sbt/issues/3482
+  [4063]: https://github.com/sbt/sbt/pull/4063
+  [4067]: https://github.com/sbt/sbt/pull/4067
+  [4070]: https://github.com/sbt/sbt/pull/4070
+  [3432]: https://github.com/sbt/sbt/issues/3432
+  [launcher50]: https://github.com/sbt/launcher/pull/50
+  [launcher51]: https://github.com/sbt/launcher/pull/51
+  [lp225]: https://github.com/sbt/sbt-launcher-package/pull/225
+  [lp226]: https://github.com/sbt/sbt-launcher-package/pull/226
+
+----
+
 ### sbt 1.1.2
 
 #### Bug fixes
