translate a few chapters of the Getting started guide

--- a/src/reference/es/00-Getting-Started/00.md
+++ b/src/reference/es/00-Getting-Started/00.md
@@ -1,31 +1,32 @@
 ---
-out: Gettnig-Started.html
+out: Getting-Started.html
 ---
 
   [Basic-Def]: Basic-Def.html
   [Scopes]: Scopes.html
-  [More-About-Settings]: More-About-Settings.html
+  [Task-Graph]: Task-Graph.html
 
-Guía de Inicio de sbt 
-=====================
+Guía de inicio de sbt
+======================
 
-sbt usa un número pequeño de conceptos para soportar *build definitions*
-(definiciones de construcción de software) flexibles y poderosas. No hay
-tantos conceptos, pero sbt no es exactamente como cualquier otro sistema
-de construcción de sofware y hay detalles con los que *usted tropezará*
-si no ha leído la documentación.
+sbt utiliza unos cuantos conceptos que dan soporte a flexibles y poderosas
+definiciones de construcción (build definitions).
+No es que haya muchos conceptos, pero sbt no es exactamente como otros sistemas
+de construcción y algunos detalles te *confundirán* si no has leído la
+documentación.
 
-La Guía de inicio cubre los conceptos que usted necesita para crear y
-mantnere una *build definition*.
+La Guía de inicio cubre los conceptos que necesitas conocer para crear y
+mantener una definición de construcción de sbt.
 
 ¡Es *altamente recomendable* leer la Guía de inicio!
 
-Si usted tiene mucha prisa, los conceptos más importantes pueden
-encontrarse en [sbt build definition][Basic-Def], [scopes][Scopes], y
-[más sobre settings][More-About-Settings]. Pero no prometemos que sea
-una buena idea dejar de leer las otras páginas de la guía.
+Si tienes prisa, los conceptos esenciales más importantes pueden ser encontrados
+en [Definición de construcción][Basic-Def], [Ámbitos][Scopes], y
+[Grafos de tareas][Task-Graph].
+Aunque no te aseguramos que saltarte el resto de páginas de la guía sea una
+buena idea.
 
-Es mejor leer en orden, ya que las páginas posteriores de la Guía de
-inicio utilizan conceptos introducidos con anterioridad.
+Lo mejor es leerlas en orden, ya que las páginas finales de la Guía de inicio se
+basan en conceptos explicados antes.
 
-Gracias por utilizar sbt *¡Diviértase!*
+Gracias por probar sbt y... ¡*divértete*!
