revise installing sbt

--- a/src/reference/es/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/es/00-Getting-Started/01-Setup/00.md
@@ -25,11 +25,11 @@ Para crear un proyecto sbt necesitarás realizar los siguientes pasos:
 
 En última instancia, la instalación de sbt se reduce a un lanzador JAR y un
 script de shell, pero dependiendo de tu plataforma, proporcionamos varias formas
-de hacer el proceso menos tedioso. Dirígete a la pasos de instalación para
+de hacer el proceso menos tedioso. Echa un vistazo a los pasos de instalación para
 [Mac][Mac], [Windows][Windows], o [Linux][Linux].
 
 ### Consejos y notas
 
-Si has tenido algún problema para ejecutar sbt, revisa las
+Si has tenido algún problema ejecutando sbt, revisa las
 [Notas sobre configuración][Setup-Notes] sobre codificaciones en el terminal,
 proxies HTTP y opciones de la JVM.
