revise Getting Started Guide

--- a/src/reference/es/00-Getting-Started/00.md
+++ b/src/reference/es/00-Getting-Started/00.md
@@ -21,7 +21,7 @@ mantener una definición de construcción de sbt.
 ¡Es *altamente recomendable* leer la Guía de inicio!
 
 Si tienes prisa, los conceptos esenciales más importantes pueden ser encontrados
-en [Definición de construcción][Basic-Def], [Ámbitos][Scopes], y
+en [Definiciones de construcción][Basic-Def], [Ámbitos][Scopes], y
 [Grafos de tareas][Task-Graph].
 Aunque no te aseguramos que saltarte el resto de páginas de la guía sea una
 buena idea.
