--- a/src/reference/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/00-Getting-Started/01-Setup/00.md
@@ -16,7 +16,7 @@ Installing sbt
 
 To create an sbt project, you'll need to take these steps:
 
--   Install JDK (We recommend Oracle JDK 8 or OpenJDK 8).
+-   Install JDK (We recommend AdoptOpenJDK JDK 8 or AdoptOpenJDK JDK 11).
 -   Install sbt.
 -   Setup a simple [hello world][Hello] project
 -   Move on to [running][Running] to learn how to run sbt.
