--- a/src/reference/es/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/es/00-Getting-Started/01-Setup/00.md
@@ -16,7 +16,7 @@ Instalar sbt
 
 Para crear un proyecto sbt necesitarás realizar los siguientes pasos:
 
--   Instalar JDK (recomendamos Oracle JDK 8 u OpenJDK 8).
+-   Instalar JDK (recomendamos AdoptOpenJDK JDK 8 u AdoptOpenJDK JDK 11).
 -   Instalar sbt.
 -   Configurar un proyecto [hola mundo][Hello] simple
 -   Continuar con [Ejecución][Running] para aprender cómo ejecutar sbt.
