--- a/src/reference/es/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/es/00-Getting-Started/01-Setup/00.md
@@ -26,7 +26,7 @@ Para crear un proyecto sbt necesitarás realizar los siguientes pasos:
 En última instancia, la instalación de sbt se reduce a un lanzador JAR y un
 script de shell, pero dependiendo de tu plataforma, proporcionamos varias formas
 de hacer el proceso menos tedioso. Echa un vistazo a los pasos de instalación para
-[Mac][Mac], [Windows][Windows], o [Linux][Linux].
+[macOS][Mac], [Windows][Windows], o [Linux][Linux].
 
 ### Consejos y notas
 
