--- a/src/reference/zh-cn/00-Getting-Started/01-Setup/00.md
+++ b/src/reference/zh-cn/00-Getting-Started/01-Setup/00.md
@@ -24,7 +24,7 @@ out: Setup.html
 -   然后前往 [.sbt 构建定义][Basic-Def] 学习更多关于构建的定义。
 
 
-最后，安装步骤就简化为一个 Jar 文件和一个 Shell 脚本，但是取决于你的平台，我们提供了好几种方式来使得步骤不是那么单调。 [Mac][Mac]，[Windows][Windows]，或[Linux][Linux] 提供了相应的安装步骤。
+最后，安装步骤就简化为一个 Jar 文件和一个 Shell 脚本，但是取决于你的平台，我们提供了好几种方式来使得步骤不是那么单调。 [macOS][Mac]，[Windows][Windows]，或[Linux][Linux] 提供了相应的安装步骤。
 
 ### 提示和技巧
 
