Replace sxr links
Fixes https://github.com/sbt/website/issues/783

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -120,8 +120,7 @@ dependencies. Read the Getting Started Guide about
 To figure out an unknown type or method, have a look at the
 [Getting Started Guide][Getting-Started] if you have not. Also
 try the [index][Name-Index] of commonly used methods, values, and
-types, the [API Documentation](../api/) and the
-[hyperlinked sources](../sxr/).
+types, and the [API Documentation](../api/).
 
 #### How do I add files to a jar package?
 
