Resource for learning
Add learn page.

--- a/src/nanoc/content/404.md
+++ b/src/nanoc/content/404.md
@@ -7,7 +7,7 @@ layout: error
 ### Where to go now
 
 * [Home page](/index.html)
-* [Documentation](/documentation.html)
+* [Learn](/learn.html)
 * [Downloads](/downloads.html)
 * [StackOverflow](https://stackoverflow.com/questions/tagged/sbt)
 
