update docs to use slash

--- a/src/reference/05-Faq/00.md
+++ b/src/reference/05-Faq/00.md
@@ -133,10 +133,10 @@ to include to the path within the jar. See
 For example, to add generated sources to the packaged source artifact:
 
 ```scala
-mappings in (Compile, packageSrc) ++= {
+Compile / packageSrc / mappings ++= {
   import Path.{flat, relativeTo}
-  val base = (sourceManaged in Compile).value
-  val srcs = (managedSources in Compile).value
+  val base = (Compile / sourceManaged).value
+  val srcs = (Compile / managedSources).value
   srcs pair (relativeTo(base) | flat)
 }
 ```
@@ -441,7 +441,7 @@ use the scoped setting, both as the input to the initializer, and the
 setting that we update.
 
 ```scala
-fullClasspath in Compile := (fullClasspath in Compile).value.filterNot(_.data.name.contains("commons-io"))
+Compile / fullClasspath := (Compile / fullClasspath).value.filterNot(_.data.name.contains("commons-io"))
 ```
 
 ### Dependency Management
