--- a/src/reference/90-Developers-Guide/06-Datatype/00.md
+++ b/src/reference/90-Developers-Guide/06-Datatype/00.md
@@ -503,10 +503,10 @@ datatypeSource in generateDatatypes := file("some/location")
 
 The plugin exposes other settings for Scala code generation:
 
- 1. `datatypeScalaFileNames in (Compile, generateDatatypes)`
+ 1. `Compile / generateDatatypes / datatypeScalaFileNames`
     This setting accepts a function `Definition => File` which will determine
     the filename for every generated Scala definition.
- 1. `datatypeScalaSealInterfaces in (Compile, generateDatatypes)`
+ 1. `Compile / generateDatatypes / datatypeScalaSealInterfaces`
     This setting accepts a boolean value, and will determine whether interfaces
     should be `seal`ed or not.
 
