--- a/src/reference/01-General-Info/90-Changes/27-sbt-1.3-Release-Notes.md
+++ b/src/reference/01-General-Info/90-Changes/27-sbt-1.3-Release-Notes.md
@@ -220,7 +220,7 @@ This was contributed by David Knapp ([@Falmarri][@Falmarri]) as [#4341][4341]
 
 #### Appending Function1
 
-`Function1` can be appened using `+=`.
+`Function1` can be appended using `+=`.
 
 ```
 Global / onLoad += { s =>
