--- a/src/reference/01-General-Info/90-Changes/28-sbt-1.2-Release-Notes.md
+++ b/src/reference/01-General-Info/90-Changes/28-sbt-1.2-Release-Notes.md
@@ -59,7 +59,7 @@ We are also looking into improving unified slash syntax parser to make it more r
 
 A huge thank you to everyone who's helped improve sbt and Zinc 1 by using them, reporting bugs, improving our documentation, porting builds, porting plugins, and submitting and reviewing pull requests.
 
-sbt 1.2.1 was brought to you by 4 contributors, according to `git shortlog -sn --no-merges v1.2.1...v1.2.0` on sbt, zinc, librarymanagement, util, io, launcher-packege, and website: Eugene Yokota, Aaron S. Hawley, Ethan Atkins, and Allan Renucci. Thanks! Also special thanks to Ches Martin and Yoshida-san for reporting these issues.
+sbt 1.2.1 was brought to you by 4 contributors, according to `git shortlog -sn --no-merges v1.2.1...v1.2.0` on sbt, zinc, librarymanagement, util, io, launcher-package, and website: Eugene Yokota, Aaron S. Hawley, Ethan Atkins, and Allan Renucci. Thanks! Also special thanks to Ches Martin and Yoshida-san for reporting these issues.
 
   [io175]: https://github.com/sbt/io/pull/175
   [zinc562]: https://github.com/sbt/zinc/pull/562
