--- a/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
+++ b/src/reference/90-Developers-Guide/02-Coding-Guideline/00.md
@@ -27,7 +27,7 @@ One exception may be deprecation if it's required for cross-building.
 
 ### Documentation
 
-> It is often useful to start with the Scaladoc before fleshing out a trait/class implementation by forcing you to consider the need for its existance.
+> It is often useful to start with the Scaladoc before fleshing out a trait/class implementation by forcing you to consider the need for its existence.
 
 All newly introduced **public** traits and classes and, to a lesser extent, functions and methods, should have Scaladoc. A significant amount of existing sbt code lacks documentation and we need to repair this situation over time. If you see an opportunity to add some documentation, or improve existing documentation then this will also help.
 
