--- a/src/reference/01-General-Info/90-Changes/26-sbt-1.4-Release-Notes.md
+++ b/src/reference/01-General-Info/90-Changes/26-sbt-1.4-Release-Notes.md
@@ -98,8 +98,8 @@ When sbt 1.4.0 starts, it will create a file named `.bsp/sbt.json` containing a 
 sbt 1.4.0 adds an official native thin client called `sbtn` that supports all tasks. If you're using the official sbt launcher 1.4.0 and not the knockoff kind you can use `--client` option to run the native thin client:
 
 ```
-$ sbt --client compile
-$ sbt --client shutdown
+\$ sbt --client compile
+\$ sbt --client shutdown
 ```
 
 The native thin client will run sbt (server) as a daemon, which avoids the JVM spinup and loading time for the second call onwards. This could an option if you would like to use sbt from the system shell such as Zsh and Fish.
