Move caching instruction to caching page

--- a/src/reference/01-Faq/00.md
+++ b/src/reference/01-Faq/00.md
@@ -24,6 +24,7 @@ out: Faq.html
   [Community-Plugins]: Community-Plugins.html
   [ivy-configurations]: Library-Management.html#ivy-configurations
   [Appending-Values]: Appending-Values.html
+  [Caching]: Caching.html
 
 Frequently Asked Questions
 --------------------------
@@ -154,42 +155,7 @@ See [Generating Files][Howto-Generating-Files].
 
 #### How can a task avoid redoing work if the input files are unchanged?
 
-There is basic support for only doing work when input files have changed
-or when the outputs haven't been generated yet. This support is
-primitive and subject to change.
-
-The relevant methods are two overloaded methods called
-[FileFunction.cached](../api/sbt/util/FileFunction\$.html). Each requires a
-directory in which to store cached data. Sample usage is:
-
-```scala
-// define a task that takes some inputs
-//   and generates files in an output directory
-myTask := {
-  // wraps a function taskImpl in an up to date check
-  //   taskImpl takes the input files, the output directory,
-  //   generates the output files and returns the set of generated files
-  val cachedFun = FileFunction.cached(streams.value.cacheDirectory / "my-task") { (in: Set[File]) =>
-    taskImpl(in, target.value) : Set[File]
-  }
-  // Applies the cached function to the inputs files
-  cachedFun(inputs.value)
-}
-```
-
-There are two additional arguments for the first parameter list that
-allow the file tracking style to be explicitly specified. By default,
-the input tracking style is `FilesInfo.lastModified`, based on a file's
-last modified time, and the output tracking style is `FilesInfo.exists`,
-based only on whether the file exists. The other available style is
-`FilesInfo.hash`, which tracks a file based on a hash of its contents.
-See the [FilesInfo API](../api/sbt/util/FilesInfo\$.html) for details.
-
-A more advanced version of `FileFunction.cached` passes a data structure
-of type [ChangeReport](../api/sbt/util/ChangeReport.html) describing the
-changes to input and output files since the last evaluation. This
-version of `cached` also expects the set of files generated as output to
-be the result of the evaluated function.
+See [Caching][Caching].
 
 ### Extending sbt
 
