Use slash syntax

--- a/src/reference/01-Faq/00.md
+++ b/src/reference/01-Faq/00.md
@@ -162,38 +162,38 @@ See [Caching][Caching].
 #### How can I add a new configuration?
 
 The following example demonstrates adding a new set of compilation
-settings and tasks to a new configuration called `samples`. The sources
+settings and tasks to a new configuration called `Samples`. The sources
 for this configuration go in `src/samples/scala/`. Unspecified settings
-delegate to those defined for the `compile` configuration. For example,
-if `scalacOptions` are not overridden for `samples`, the options for the
+delegate to those defined for the `Compile` configuration. For example,
+if `scalacOptions` are not overridden for `Samples`, the options for the
 main sources are used.
 
-Options specific to `samples` may be declared like:
+Options specific to `Samples` may be declared like:
 
 ```scala
-scalacOptions in Samples += "-deprecation"
+Samples / scalacOptions += "-deprecation"
 ```
 
 This uses the main options as base options because of `+=`. Use `:=` to
 ignore the main options:
 
 ```scala
-scalacOptions in Samples := "-deprecation" :: Nil
+Samples / scalacOptions := "-deprecation" :: Nil
 ```
 
 The example adds all of the usual compilation related settings and tasks
 to `samples`:
 
 ```
-samples:run
-samples:runMain
-samples:compile
-samples:console
-samples:consoleQuick
-samples:scalacOptions
-samples:fullClasspath
-samples:package
-samples:packageSrc
+Samples/run
+Samples/runMain
+Samples/compile
+Samples/console
+Samples/consoleQuick
+Samples/scalacOptions
+Samples/fullClasspath
+Samples/package
+Samples/packageSrc
 ...
 ```
 
@@ -253,7 +253,7 @@ jars in order to run the tool. First, define and add the new
 configuration:
 
 ```scala
-val ProguardConfig = config("proguard") hide
+lazy val ProguardConfig = config("proguard").hide
 
 ivyConfigurations += ProguardConfig
 ```
@@ -267,9 +267,9 @@ libraryDependencies +=
    "net.sf.proguard" % "proguard" % "4.4" % ProguardConfig.name
 
 // Extract the dependencies from the UpdateReport.
-managedClasspath in proguard := {
+ProguardConfig / managedClasspath := {
     // these are the types of artifacts to include
-    val artifactTypes: Set[String] = (classpathTypes in proguard).value
+    val artifactTypes: Set[String] = (ProguardConfig / classpathTypes).value
     Classpaths.managedJars(proguardConfig, artifactTypes, update.value)
 }
 
@@ -277,7 +277,7 @@ managedClasspath in proguard := {
 //  in a ClassLoader and reflectively calling an appropriate
 //  method.
 proguard := {
-    val cp: Seq[File] = (managedClasspath in proguard).value
+    val cp: Seq[File] = (ProguardConfig / managedClasspath).value
   // ... do something with , which includes proguard ...
 }
 ```
@@ -360,8 +360,8 @@ has been loaded and prints that number:
     println("Project load count: " + previous)
     s.put(key, previous + 1)
   }
-  onLoad in Global := {
-    val previous = (onLoad in Global).value
+  Global / onLoad := {
+    val previous = (Global / onLoad).value
     f compose previous
   }
 }
@@ -448,8 +448,8 @@ version of the plugin.
 A typical mistake is to put global plugin definitions in
 `~/.sbt/plugins.sbt`. **THIS IS WRONG.** `.sbt` files in `~/.sbt` are
 loaded for *each* build--that is, for *each* cross-compilation. So, if
-you build for Scala 2.9.0, sbt will try to find a version of the plugin
-that's compiled for 2.9.0--and it usually won't. That's because it
+you build for Scala 2.11.0, sbt will try to find a version of the plugin
+that's compiled for 2.11.0--and it usually won't. That's because it
 doesn't *know* the dependency is a plugin.
 
 To tell sbt that the dependency is an sbt plugin, make sure you define
