--- a/src/reference/01-Faq/00.md
+++ b/src/reference/01-Faq/00.md
@@ -25,6 +25,7 @@ out: Faq.html
   [ivy-configurations]: Library-Management.html#ivy-configurations
   [Appending-Values]: Appending-Values.html
   [Caching]: Caching.html
+  [ThisBuild]: Multi-Project.html#ThisBuild
 
 Frequently Asked Questions
 --------------------------
@@ -115,6 +116,15 @@ example.
 It's used to create a `ModuleID` from strings, when specifying managed
 dependencies. Read the Getting Started Guide about
 [library dependencies][Library-Dependencies].
+
+#### What does `ThisBuild / scalaVersion` mean?
+
+`ThisBuild` acts as a special subproject name that you can use to define default
+value for the build.
+When you define one or more subprojects, and when the subproject does not define
+`scalaVersion` key, it will look for `ThisBuild / scalaVerion`.
+
+See [build-wide settings][ThisBuild].
 
 #### What is `ModuleID`, `Project`, ...?
 
