--- a/src/reference/01-Faq/00.md
+++ b/src/reference/01-Faq/00.md
@@ -26,6 +26,7 @@ out: Faq.html
   [Appending-Values]: Appending-Values.html
   [Caching]: Caching.html
   [ThisBuild]: Multi-Project.html#ThisBuild
+  [Apidoc]: $apidoc_base$/api/sbt/index.html
 
 Frequently Asked Questions
 --------------------------
@@ -131,7 +132,7 @@ See [build-wide settings][ThisBuild].
 To figure out an unknown type or method, have a look at the
 [Getting Started Guide][Getting-Started] if you have not. Also
 try the [index][Name-Index] of commonly used methods, values, and
-types, and the [API Documentation](../api/).
+types, and the [API Documentation][Apidoc].
 
 #### How do I add files to a jar package?
 
@@ -310,7 +311,7 @@ proguard := {
 
 It is possible to register additional jars that will be placed on sbt's
 classpath. Through
-[State](../api/sbt/State\$.html), it is possible to obtain a
+[State]($apidoc_base$/api/sbt/State\$.html), it is possible to obtain a
 [xsbti.ComponentProvider](../api/xsbti/ComponentProvider.html), which
 manages application components. Components are groups of files in the
 `~/.sbt/boot/` directory and, in this case, the application is sbt. In
