Update first page

--- a/src/reference/00.md
+++ b/src/reference/00.md
@@ -12,6 +12,10 @@ out: index.html
   [Java-Sources]: Java-Sources.html
   [Testing]: Testing.html
   [Parallel-Execution]: Parallel-Execution.html
+  [Discussions]: https://github.com/sbt/sbt/discussions
+  [Faq]: Faq.html
+  [Support]: https://www.scala-sbt.org/support.html
+  [Apidoc]: $apidoc_base$/api/sbt/index.html
 
 sbt Reference Manual
 ====================
@@ -30,11 +34,13 @@ To get started, *please read* the
 [Getting Started Guide][Getting-Started]. You will save
 yourself a *lot* of time if you have the right understanding of the big
 picture up-front.
-All documentation may be found via the table of contents included at the end of every page.
+All documentation may be found via the table of contents included on the left of every page.
 
-Use [Stack Overflow](https://stackoverflow.com/tags/sbt) for
-questions. Use the [sbt-dev mailing list](https://groups.google.com/d/forum/sbt-dev) for discussing sbt
-development. Use [@scala_sbt](https://twitter.com/scala_sbt) for questions and discussions.
+See also [Frequently asked question][Faq].
+
+See [Support][Support] on where you can get help about sbt.
+For discussing sbt development, use [Discussions][Discussions].
+To stay up to date about the news related to sbt, follow us [@scala_sbt](https://twitter.com/scala_sbt).
 
 ### Features of sbt
 
@@ -43,10 +49,9 @@ development. Use [@scala_sbt](https://twitter.com/scala_sbt) for questions and d
     use the full flexibility of Scala code
 -   Accurate incremental recompilation using information extracted from
     the compiler
+-   [Library management support][Library-Dependencies] using Coursier
 -   Continuous compilation and testing with
     [triggered execution][Triggered-Execution]
--   Packages and publishes jars
--   Generates documentation with scaladoc
 -   Supports mixed Scala/[Java][Java-Sources] projects
 -   Supports [testing][Testing] with ScalaCheck,
     specs, and ScalaTest. JUnit is supported by a plugin.
@@ -57,9 +62,6 @@ development. Use [@scala_sbt](https://twitter.com/scala_sbt) for questions and d
 -   External project support (list a git repository as a dependency!)
 -   [Parallel task execution][Parallel-Execution],
     including parallel test execution
--   [Library management support][Library-Dependencies]:
-    inline declarations, external Ivy or Maven configuration files, or
-    manual management
 
 ### Also
 
@@ -71,5 +73,5 @@ Documentation for 0.13.x has been
 [archived here](https://www.scala-sbt.org/0.13/docs/index.html). This
 documentation applies to sbt $app_version$.
 
-See also the [API Documentation](../api/index.html),
+See also the [API Documentation][Apidoc],
 and the [index of names and types][Name-Index].
