How to define a custom dependency configuration

--- a/src/reference/01-Faq/00.md
+++ b/src/reference/01-Faq/00.md
@@ -12,6 +12,7 @@ out: Faq.html
   [Multi-Project]: Multi-Project.html
   [Name-Index]: Name-Index.html
   [Mapping-Files]: Mapping-Files.html
+  [Custom-Dependency-Configuration]: Custom-Dependency-Configuration.html
   [Testing]: Testing.html
   [additional-test-configurations]: Testing.html#additional-test-configurations
   [Library-Management]: Library-Management.html
@@ -170,43 +171,9 @@ See [Caching][Caching].
 
 ### Extending sbt
 
-#### How can I add a new configuration?
+#### How can I add a new dependency configuration?
 
-The following example demonstrates adding a new set of compilation
-settings and tasks to a new configuration called `Samples`. The sources
-for this configuration go in `src/samples/scala/`. Unspecified settings
-delegate to those defined for the `Compile` configuration. For example,
-if `scalacOptions` are not overridden for `Samples`, the options for the
-main sources are used.
-
-Options specific to `Samples` may be declared like:
-
-```scala
-Samples / scalacOptions += "-deprecation"
-```
-
-This uses the main options as base options because of `+=`. Use `:=` to
-ignore the main options:
-
-```scala
-Samples / scalacOptions := "-deprecation" :: Nil
-```
-
-The example adds all of the usual compilation related settings and tasks
-to `samples`:
-
-```
-Samples/run
-Samples/runMain
-Samples/compile
-Samples/console
-Samples/consoleQuick
-Samples/scalacOptions
-Samples/fullClasspath
-Samples/package
-Samples/packageSrc
-...
-```
+See [How to define a custom dependency configuration][Custom-Dependency-Configuration].
 
 #### How do I add a test configuration?
 
