change many http links to https

--- a/src/reference/01-General-Info/90-Changes/27-sbt-1.3-Release-Notes.md
+++ b/src/reference/01-General-Info/90-Changes/27-sbt-1.3-Release-Notes.md
@@ -332,7 +332,7 @@ The last feature release of sbt 1 was [sbt 1.2.0](https://www.lightbend.com/blog
   [zinc655]: https://github.com/sbt/zinc/pull/655
   [@eed3si9n]: https://github.com/eed3si9n
   [@eatkins]: https://github.com/eatkins
-  [@dwijnand]: http://github.com/dwijnand
+  [@dwijnand]: https://github.com/dwijnand
   [@cunei]: https://github.com/cunei
   [@Falmarri]: https://github.com/Falmarri
   [@raboof]: https://github.com/raboof
