--- a/src/reference/01-General-Info/90-Changes/28-sbt-1.2-Release-Notes.md
+++ b/src/reference/01-General-Info/90-Changes/28-sbt-1.2-Release-Notes.md
@@ -64,7 +64,7 @@ sbt 1.2.1 was brought to you by 4 contributors, according to `git shortlog -sn -
   [io175]: https://github.com/sbt/io/pull/175
   [zinc562]: https://github.com/sbt/zinc/pull/562
   [@eed3si9n]: https://github.com/eed3si9n
-  [@dwijnand]: http://github.com/dwijnand
+  [@dwijnand]: https://github.com/dwijnand
   [@cunei]: https://github.com/cunei
   [@eatkins]: https://github.com/eatkins
   [@allanrenucci]: https://github.com/allanrenucci
@@ -406,7 +406,7 @@ sbt 1.2.0 was brought to you by 60 contributors. Dale Wijnand, Eugene Yokota, Ke
   [zinc548]: https://github.com/sbt/zinc/pull/548
   [zinc557]: https://github.com/sbt/zinc/pull/557
   [@eed3si9n]: https://github.com/eed3si9n
-  [@dwijnand]: http://github.com/dwijnand
+  [@dwijnand]: https://github.com/dwijnand
   [@cunei]: https://github.com/cunei
   [@jvican]: https://github.com/jvican
   [@Duhemm]: https://github.com/Duhemm
