--- a/src/reference/01-General-Info/90-Changes/30-sbt-1.0-Release-Notes.md
+++ b/src/reference/01-General-Info/90-Changes/30-sbt-1.0-Release-Notes.md
@@ -230,7 +230,7 @@ If you have a list of files:
   [3481]: https://github.com/sbt/sbt/pull/3481
   [util121]: https://github.com/sbt/util/pull/121
   [@eed3si9n]: https://github.com/eed3si9n
-  [@dwijnand]: http://github.com/dwijnand
+  [@dwijnand]: https://github.com/dwijnand
   [@jvican]: https://github.com/jvican
   [@Duhemm]: https://github.com/Duhemm
   [@jroper]: https://github.com/jroper
@@ -490,7 +490,7 @@ Too many people to thank here. See [Credits][Credits]
   [Migrating-from-sbt-013x]: Migrating-from-sbt-013x.html
   [@eed3si9n]: https://github.com/eed3si9n
   [@Duhemm]: https://github.com/Duhemm
-  [@dwijnand]: http://github.com/dwijnand
+  [@dwijnand]: https://github.com/dwijnand
   [@gheine]: https://github.com/gheine
   [@gkossakowski]: https://github.com/gkossakowski
   [@jroper]: https://github.com/jroper
@@ -505,7 +505,7 @@ Too many people to thank here. See [Credits][Credits]
   [@smarter]: https://github.com/smarter
   [@valydia]: https://github.com/valydia
   [@xuwei-k]: https://github.com/xuwei-k
-  [sbt-1-0-roadmap]: http://developer.lightbend.com/blog/2017-04-18-sbt-1-0-roadmap-and-beta1/
+  [sbt-1-0-roadmap]: https://developer.lightbend.com/blog/2017-04-18-sbt-1-0-roadmap-and-beta1/
   [840]: https://github.com/sbt/sbt/issues/840
   [2613]: https://github.com/sbt/sbt/pull/2613
   [1911]: https://github.com/sbt/sbt/issues/1911
