--- a/src/reference/ja/01-General-Info/Changes/47-sbt-1.0-Release-Notes.md
+++ b/src/reference/ja/01-General-Info/Changes/47-sbt-1.0-Release-Notes.md
@@ -253,12 +253,12 @@ Zinc の内部構造の保存方法として Google Protocol Buffer を用いた
   [Credits]: ../Credits.html
   [Migrating-from-sbt-013x]: ../Migrating-from-sbt-013x.html
   [@eed3si9n]: https://github.com/eed3si9n
-  [@dwijnand]: http://github.com/dwijnand
+  [@dwijnand]: https://github.com/dwijnand
   [@jvican]: https://github.com/jvican
   [@Duhemm]: https://github.com/Duhemm
   [@jsuereth]: https://github.com/jsuereth
   [@gkossakowski]: https://github.com/gkossakowski
-  [sbt-1-0-roadmap]: http://developer.lightbend.com/blog/2017-04-18-sbt-1-0-roadmap-and-beta1/
+  [sbt-1-0-roadmap]: https://developer.lightbend.com/blog/2017-04-18-sbt-1-0-roadmap-and-beta1/
   [@eed3si9n]: https://github.com/eed3si9n
   [@jroper]: https://github.com/jroper
   [@valydia]: https://github.com/valydia
