fix 'verion' typo; minor updates to README; update scalafmt version

--- a/src/reference/01-Faq/00.md
+++ b/src/reference/01-Faq/00.md
@@ -124,7 +124,7 @@ dependencies. Read the Getting Started Guide about
 `ThisBuild` acts as a special subproject name that you can use to define default
 value for the build.
 When you define one or more subprojects, and when the subproject does not define
-`scalaVersion` key, it will look for `ThisBuild / scalaVerion`.
+`scalaVersion` key, it will look for `ThisBuild / scalaVersion`.
 
 See [build-wide settings][ThisBuild].
 
